---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI025.pyi:4:29: PYI025 Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
  |
4 | from collections.abc import Set  # PYI025
  |                             ^^^ PYI025
  |
  = help: Alias `Set` to `AbstractSet`

PYI025.pyi:10:5: PYI025 Use `from collections.abc import Set as AbstractSet` to avoid confusion with the `set` builtin
   |
 8 |     Container,
 9 |     Sized,
10 |     Set,  # PYI025
   |     ^^^ PYI025
11 |     ValuesView
12 | )
   |
   = help: Alias `Set` to `AbstractSet`


